--- a/templates/main_page.html
+++ b/templates/main_page.html
@@ -12,13 +12,14 @@
 
     <!-- D3.js -->
     <script src="https://d3js.org/d3.v6.min.js"></script>
-
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
-    <script src="/static/javascript/main_menu.js"></script>
+
 </head>
 <body>
+
+    <!--Side menu -->
     <div class="side-menu">
         <ul>
           <li><i class="material-icons">account_circle</i><span>My Account</span></li>
@@ -31,31 +32,39 @@
             <li><i class="material-icons">settings</i><span>Settings</span></li>
           </ul>
         </div>
-      </div>
-      <div class="content-wrapper">
+    </div>
+
+     <!-- Main contnent -->
+    <div class="content-wrapper" id="content-wrapper">
         <div class="col-12">
+            
+            <!--Chart -->
+            <div class="chart" >
             <div id="chart"></div>
-            <div class="row mt-4 cards-row">
+            </div>
+            
+            <!-- Bottom Cards -->
+            <div class="row mt-4">
                 <!-- Card 1 -->
-                <div class="card-container mb-4">
+                <div class="card-container col">
                     <div class="card h-100">
-                        <div class="card-body">
-                            <h5 class="card-title">Card title</h5>
-                            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                        </div>
+                    <div class="card-body">
+                        <h5 class="card-title">Card title</h5>
+                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                    </div>
                     </div>
                 </div>
                 <!-- Card 2 -->
-                <div class="card-container mb-4">
+                <div class="card-container col">
                     <div class="card h-100">
-                        <div class="card-body">
-                            <h5 class="card-title">Card title</h5>
-                            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                        </div>
+                    <div class="card-body">
+                        <h5 class="card-title">Card title</h5>
+                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                    </div>
                     </div>
                 </div>
                 <!-- Card 3 -->
-                <div class="card-container mb-4">
+                <div class="card-container col">
                     <div class="card h-100">
                         <div class="card-body">
                             <h5 class="card-title">Card title</h5>
@@ -65,8 +74,12 @@
                 </div>
             </div>
         </div>
-      </div>
     </div>
+    <!-- End of cards -->
+    <!-- JavaScript -->
+    <script src="/static/javascript/main_menu.js"></script>  
+    <script src="/static/javascript/chart.js"></script>
+      
 </body>
 </html>
 
