--- a/templates/main_page.html
+++ b/templates/main_page.html
@@ -77,6 +77,7 @@
     </div>
     <!-- End of cards -->
     <!-- JavaScript -->
+    <script src="https://d3js.org/d3.v7.min.js"></script>
     <script src="/static/javascript/main_menu.js"></script>  
     <script src="/static/javascript/chart.js"></script>
       
