--- a/templates/main_page.html
+++ b/templates/main_page.html
@@ -12,75 +12,75 @@
 
     <!-- D3.js -->
     <script src="https://d3js.org/d3.v6.min.js"></script>
-
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
-    <script src="/static/javascript/main_menu.js"></script>
+
 </head>
 <body>
-    <div class="container-fluid">
-        <div class="row">
-            <div class="col-2 vh-100">
-                <nav id="sidebar" class="d-flex flex-column justify-content-between">
-                    <div class="my-3">
-                        <div class="d-flex align-items-center mb-2">
-                            <span class="material-icons">account_circle</span>
-                            <span class="ms-2">User Name</span>
-                        </div>
-                        <div class="d-flex align-items-center mb-2">
-                            <span class="material-icons">bar_chart</span>
-                            <span class="ms-2">Data</span>
-                        </div>
-                        <div class="d-flex align-items-center mb-2">
-                            <div id="collapse-container" class="d-flex align-items-center">
-                                <span class="material-icons">double_arrow_left</span>
-                                <span class="ms-2">Collapse</span>
-                            </div>
-                        </div>
-                            <div class="my-3">
-                            <div class="d-flex align-items-center mb-2">
-                            <span class="material-icons">logout</span>
-                            <span class="ms-2">Log out</span>
-                        </div>
-                        <div class="d-flex align-items-center">
-                            <span class="material-icons">settings</span>
-                            <span class="ms-2">Settings</span>
-                        </div>
-                    </div>
-                </nav>
+
+    <!--Side menu -->
+    <div class="side-menu">
+        <ul>
+          <li><i class="material-icons">account_circle</i><span>My Account</span></li>
+          <li><i class="material-icons">bar_chart</i><span>Data</span></li>
+          <li class="collapse-item" onclick="toggleCollapse()"><i class="material-icons">double_arrow</i><span>Collapse</span></li>
+        </ul>
+        <div class="bottom-items">
+          <ul>
+            <li><i class="material-icons">logout</i><span>Log out</span></li>
+            <li><i class="material-icons">settings</i><span>Settings</span></li>
+          </ul>
+        </div>
+    </div>
+
+     <!-- Main contnent -->
+    <div class="content-wrapper" id="content-wrapper">
+        <div class="col-12">
+
+            <!--Chart -->
+            <div class="chart" >
+            <div id="chart"></div>
             </div>
-            <div class="col-10">
-                <div id="chart"></div>
-                <div class="row mt-4">
-                    <div class="col-lg-4">
-                        <div class="card">
-                            <div class="card-body">
-                                <h5 class="card-title">Card title</h5>
-                                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                            </div>
-                        </div>
+
+            <!-- Bottom Cards -->
+            <div class="row mt-4">
+                <!-- Card 1 -->
+                <div class="card-container col">
+                    <div class="card h-100">
+                    <div class="card-body">
+                        <h5 class="card-title">Card title</h5>
+                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                     </div>
-                    <div class="col-lg-4">
-                        <div class="card">
-                            <div class="card-body">
-                                <h5 class="card-title">Card title</h5>
-                                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                            </div>
-                        </div>
                     </div>
-                    <div class="col-lg-4">
-                        <div class="card">
-                            <div class="card-body">
-                                <h5 class="card-title">Card title</h5>
-                                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                            </div>
+                </div>
+                <!-- Card 2 -->
+                <div class="card-container col">
+                    <div class="card h-100">
+                    <div class="card-body">
+                        <h5 class="card-title">Card title</h5>
+                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                    </div>
+                    </div>
+                </div>
+                <!-- Card 3 -->
+                <div class="card-container col">
+                    <div class="card h-100">
+                        <div class="card-body">
+                            <h5 class="card-title">Card title</h5>
+                            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
     </div>
+    <!-- End of cards -->
+    <!-- JavaScript -->
+    <script src="https://d3js.org/d3.v7.min.js"></script>
+    <script src="/static/javascript/main_menu.js"></script>
+    <script src="/static/javascript/chart.js"></script>
+
 </body>
 </html>
 
