--- a/templates/main_page.html
+++ b/templates/main_page.html
@@ -23,7 +23,7 @@
     <div class="side-menu">
         <ul>
           <li><i class="material-icons">account_circle</i><span>My Account</span></li>
-          <li><i class="material-icons">bar_chart</i><span>Data</span></li>
+          <li><a href="/prices"><i class="material-icons">bar_chart</i><span>Price Data</span></a></li>
           <li class="collapse-item" onclick="toggleCollapse()"><i class="material-icons">double_arrow</i><span>Collapse</span></li>
         </ul>
         <div class="bottom-items">
