20230813 09:29 	new file:   __pycache__/db_config.cpython-39.pyc 	new file:   __pycache__/extensions.cpython-39.pyc 	new file:   __pycache__/fetch_data.cpython-39.pyc 	new file:   db_config.py 	renamed:    extentions.py -> extensions.py 	modified:   fetch_data.py 	new file:   fetch_now.py 	modified:   flask_app.py 	deleted:    main 	modified:   models.py 	new file:   static/images/hero-image-top.png 	modified:   static/style.css 	modified:   templates/main_page.html

--- a/templates/main_page.html
+++ b/templates/main_page.html
@@ -21,6 +21,7 @@
 
     <!--Side menu -->
     <div class="side-menu">
+        <img src="/static/images/roben-logo.svg" alt="Logo" width="150">
         <ul>
           <li><i class="material-icons">account_circle</i><span>My Account</span></li>
           <li><a href="/prices"><i class="material-icons">bar_chart</i><span>Price Data</span></a></li>
@@ -49,7 +50,7 @@
                 <div class="card-container col">
                     <div class="card h-100">
                     <div class="card-body">
-                        <h5 class="card-title">Card title</h5>
+                        <h5 class="card-title">Last updated 0412 18:04</h5>
                         <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                     </div>
                     </div>
