--- a/static/style.css
+++ b/static/style.css
@@ -90,6 +90,8 @@ p {
 }
 
 .side-menu ul {
+    align-items: center;
+    text-decoration: none;
     list-style-type: none;
     padding: 0;
     margin: 0;
@@ -98,6 +100,7 @@ p {
 .side-menu li {
     display: flex;
     align-items: center;
+    text-decoration: none;
     padding: 16px 0;
     color: var(--grey100);
     cursor: pointer;
@@ -105,11 +108,27 @@ p {
 
 .side-menu li:hover {
     background-color: var(--grey300);
+    align-items: center;
+    text-decoration: none;
 }
 
 .side-menu i.material-icons {
     margin: 0 16px;
 }
+
+.side-menu li a {
+    display: flex;
+    align-items: center;
+    text-decoration: none;
+    color: var(--grey100);
+}
+
+.side-menu li a:hover {
+    align-items: center;
+    text-decoration: none;
+    background-color: var(--grey300);
+}
+
 
 .bottom-items {
     position: absolute;
