--- a/static/style.css
+++ b/static/style.css
@@ -32,14 +32,14 @@ h2 {
     font-weight: 400;
     font-size: 24px;
     line-height: 32px;
-    color: var(--grey100);
+    color: var(--grey200);
 }
 
 /* Fonts & Texts */
 
 .my-font, .my-font * {
     font-family: 'Roboto', sans-serif;
-    color: var(--grey100);
+    color: var(--grey200);
   }
 
 
@@ -48,8 +48,8 @@ body {
     font-style: normal;
     font-weight: 300;
     font-size: 16px;
-    line-height: 16px;
-    color: var(--grey100);
+    line-height: 24px;
+    color: var(--grey200);
 }
 p {
     font-family: 'Roboto', sans-serif;
@@ -102,7 +102,7 @@ p {
     align-items: center;
     text-decoration: none;
     padding: 16px 0;
-    color: var(--grey100);
+    color: var(--grey200);
     cursor: pointer;
 }
 
@@ -114,13 +114,14 @@ p {
 
 .side-menu i.material-icons {
     margin: 0 16px;
+    color: var(--grey200);
 }
 
 .side-menu li a {
     display: flex;
     align-items: center;
     text-decoration: none;
-    color: var(--grey100);
+    color: var(--grey200);
 }
 
 .side-menu li a:hover {
@@ -158,7 +159,7 @@ p {
 }
 
 .grid line {
-    stroke: lightgrey;
+    stroke: var(--grey300);
     stroke-opacity: 0.7;
     shape-rendering: crispEdges;
   }
