--- a/templates/main_page.html
+++ b/templates/main_page.html
@@ -1,41 +1,7 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dashboard</title>
+{% extends 'base.html' %}
 
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <link href="https://fonts.googleapis.com/css2?family=Fraunces:wght@400;600&family=Roboto:wght@300;500&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <link rel="stylesheet" href="/static/style.css">
-
-    <!-- D3.js -->
-    <script src="https://d3js.org/d3.v6.min.js"></script>
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
-
-</head>
-<body>
-
-    <!--Side menu -->
-    <div class="side-menu">
-        <img src="/static/images/roben-logo.svg" alt="Logo" width="150">
-        <ul>
-          <li><i class="material-icons">account_circle</i><span>My Account</span></li>
-          <li><a href="/prices"><i class="material-icons">bar_chart</i><span>Price Data</span></a></li>
-          <li class="collapse-item" onclick="toggleCollapse()"><i class="material-icons">double_arrow</i><span>Collapse</span></li>
-        </ul>
-        <div class="bottom-items">
-          <ul>
-            <li><i class="material-icons">logout</i><span>Log out</span></li>
-            <li><i class="material-icons">settings</i><span>Settings</span></li>
-          </ul>
-        </div>
-    </div>
-
-     <!-- Main contnent -->
+{% block content %}
+    <!-- Main content -->
     <div class="content-wrapper" id="content-wrapper">
         <div class="col-12">
 
@@ -73,15 +39,9 @@
                         </div>
                     </div>
                 </div>
+                <!-- End of cards -->
             </div>
         </div>
     </div>
-    <!-- End of cards -->
-    <!-- JavaScript -->
-    <script src="https://d3js.org/d3.v7.min.js"></script>
-    <script src="/static/javascript/main_menu.js"></script>
-    <script src="/static/javascript/chart.js"></script>
 
-</body>
-</html>
-
+    {% endblock %}
