--- a/templates/base.html
+++ b/templates/base.html
@@ -21,8 +21,10 @@
 
         <!--Side menu -->
         <div class="side-menu">
-            <a href="/main"><img src="/static/images/roben-logo.svg" alt="Logo" width="100"></a>
-            <ul>
+            <a href="/main">
+                <img src="/static/images/roben-logo.svg" alt="Logo" width="120" class="expanded-logo">
+                <img src="/static/images/roben-bird-logo.svg" alt="Logo" width="48" class="collapsed-logo">
+            </a>            <ul>
             <li><i class="material-icons">account_circle</i><span>My Account</span></li>
             <li><a href="/prices"><i class="material-icons">bar_chart</i><span>Price Data</span></a></li>
             <li class="collapse-item" onclick="toggleCollapse()"><i class="material-icons collapse-icon">double_arrow</i><span>Collapse</span></li>
