--- a/templates/main_page.html
+++ b/templates/main_page.html
@@ -11,7 +11,7 @@
             </div>
 
             <!-- Bottom Cards -->
-            <div class="row mt-4">
+            <div class="custom-row">
                 <!-- Card 1 -->
                 <div class="card-container col">
                     <div class="card h-100">
