--- a/static/style.css
+++ b/static/style.css
@@ -80,9 +80,6 @@ p {
   transition: transform 0.3s;
 }
 
-.side-menu.logos {
-
-}
 
 .side-menu .collapsed-logo {
     display: none;
@@ -180,8 +177,16 @@ p {
     border-radius: 16px;
     padding: 16px;
     height: 70vh;
-    width: 100%;
+    width: 100%; 
+    box-sizing: border-box; 
+    margin-bottom: 16px;
 }
+
+#chart {
+    width: 100%;
+    height: 100%;
+  }
+
 
 .grid line {
     stroke: var(--grey300);
@@ -210,6 +215,11 @@ p {
     flex-wrap: wrap;
     margin-right: 0px;
     margin-left: 0px;
+    gap: 16px;
+    height: 30%;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
     gap: 16px;
 }
 
@@ -242,14 +252,25 @@ p {
     flex: 1;
     display: flex;
     flex-direction: column;
-    justify-content: flex-end;
+    justify-content: space-between;
     margin-left: calc(100% - (100% - var(--side-menu-width)));
     min-height: 100vh;
+    box-sizing: border-box; 
 }
+
 
 .content-wrapper.menu-collapsed {
     margin-left: var(--side-menu-collapsed-width);
 }
+
+.card.bottom-row {
+    height: 30%;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    gap: 16px;
+}
+
 
 .card-container {
     flex: 1 0;
