--- a/templates/base.html
+++ b/templates/base.html
@@ -67,7 +67,7 @@
         {% block content %}{% endblock %}
     
         <!-- JavaScript -->
-        <script src="/static/javascript/settingsjs"></script>
+        <script src="/static/javascript/settings.js"></script>
         <script src="https://d3js.org/d3.v7.min.js"></script>
         <script src="/static/javascript/main_menu.js"></script>
         <script src="/static/javascript/chart.js"></script>
