--- a/templates/main_page.html
+++ b/templates/main_page.html
@@ -15,33 +15,43 @@
                 <!-- Card 1 -->
                 <div class="card-container col">
                     <div class="card h-100">
-                    <div class="card-body">
-                        <h5 class="card-title">Last updated 0412 18:04</h5>
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                    </div>
+                        <div class="card-body">
+                            <h5 class="card-title">
+                                <img src="static/images/washing-machine.png" alt="icon"> Washing Machine
+                            </h5>
+                            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                        </div>
                     </div>
                 </div>
                 <!-- Card 2 -->
                 <div class="card-container col">
                     <div class="card h-100">
-                    <div class="card-body">
-                        <h5 class="card-title">Card title</h5>
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                    </div>
-                    </div>
-                </div>
-                <!-- Card 3 -->
-                <div class="card-container col">
-                    <div class="card h-100">
                         <div class="card-body">
-                            <h5 class="card-title">Card title</h5>
+                            <h5 class="card-title">
+                                <img src="static/images/dishwasher.png" alt="icon"> Dishwasher
+                            </h5>
                             <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                         </div>
                     </div>
                 </div>
+                <!-- Card 3 -->
+                <div class="card-container col">
+                  <div class="card h-100">
+                    <div class="card-body">
+                      <h5 class="card-title">
+                        <img src="static/images/charger.png" alt="icon">
+                        EV Car Charger
+                      </h5>
+                      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                    </div>
+                  </div>
+                </div>
+
                 <!-- End of cards -->
             </div>
         </div>
     </div>
+    <script src="https://d3js.org/d3.v7.min.js"></script>
+    <script src="static/javascript/price_chart.js"></script>
 
     {% endblock %}
