--- a/static/style.css
+++ b/static/style.css
@@ -75,6 +75,17 @@ p {
     line-height: 24px;
 }
 
+.chart-font {
+    font-family: 'Roboto', sans-serif;
+    font-size: 12px;
+    color: var(--grey200);
+  }  
+
+.chart-colours{
+    background-color: var(--white);
+    
+}
+
 .rotate-icon {
   transform: rotate(180deg);
   transition: transform 0.3s;
@@ -84,19 +95,19 @@ p {
 .side-menu .collapsed-logo {
     display: none;
     margin: 8px 0px;
-    
+
   }
-  
+
   .side-menu.collapsed .expanded-logo {
     display: none;
     margin: 8px;
     padding: 8px;
   }
-  
+
   .side-menu.collapsed .collapsed-logo {
     display: block;
   }
-  
+
 .side-menu {
     border-right: 1px solid var(--grey300);
     width: var(--side-menu-width);
@@ -155,7 +166,7 @@ p {
     text-decoration: none;
     color: var(--grey200);
   }
-  
+
 
 .bottom-items {
     position: absolute;
@@ -171,14 +182,17 @@ p {
     display: none;
 }
 
+#chart {
+    width: 100%;
+    height: 70vh;
+}
+
 .chart {
     background-color: var(--white);
     border: 1px solid var(--grey300);
     border-radius: 16px;
     padding: 16px;
-    height: 70vh;
-    width: 100%; 
-    box-sizing: border-box; 
+    box-sizing: border-box;
     margin-bottom: 16px;
 }
 
@@ -249,7 +263,7 @@ p {
     justify-content: space-between;
     margin-left: calc(100% - (100% - var(--side-menu-width)));
     min-height: 100vh;
-    box-sizing: border-box; 
+    box-sizing: border-box;
 }
 
 
@@ -281,7 +295,68 @@ p {
     justify-content: space-between;
     border-radius: 16px;
     border: 1px solid var(--grey300);
-}
+  }
+  
+  .card-title {
+    display: flex;
+    align-items: center;
+    height: 48px;
+  }
+  
+  
+  .card-title img {
+    margin-right: 16px;
+    width: 40px;
+    height: 40px;
+  }
+  
+  .card-title h5 {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    flex-grow: 1;
+  }
+  
+   /*Overlay*/
+
+.overlay {
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    background-color: rgba(0, 0, 0, 0.5);
+    backdrop-filter: blur(5px);
+    z-index: 100;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    transition: transform 0.3s ease-in-out;
+    transform: translateY(100%);
+  }
+  
+  .overlay-content {
+    background-color: var(--white);
+    border: 1px solid var(--grey200);
+    border-radius: 16px;
+    width: 600px;
+    height: 600px;
+    position: relative;
+  }
+  
+  .close {
+    position: absolute;
+    top: 10px;
+    right: 15px;
+    color: var(--grey200);
+    font-size: 28px;
+    font-weight: bold;
+    cursor: pointer;
+  }
+  
+  .hidden {
+    display: none;
+  }
 
 /* Hamburger Menu */
 
@@ -341,7 +416,7 @@ p {
 .hamburger-menu #hamburgerMenuItems.hide {
     display: none;
   }
-  
+
 @media screen and (max-width: 767px) {
 
     .hamburger-menu {
