--- a/templates/prices.html
+++ b/templates/prices.html
@@ -2,27 +2,29 @@
 
 {% block content %}
 <div class="content-wrapper" id="content-wrapper">
-    <h1>Historical Prices Data</h1>
-    <table>
-        <thead>
-            <tr>
-                <th>Date</th>
-                <th>Region</th>
-                <th>Hour</th>
-                <th>Price</th>
-            </tr>
-        </thead>
-        <tbody>
-            {% for price in prices %}
-                <tr>
-                    <td>{{ price.date }}</td>
-                    <td>{{ price.region }}</td>
-                    <td>{{ price.hour }}</td>
-                    <td>{{ price.price }}</td>
-                </tr>
-            {% endfor %}
-        </tbody>
-    </table>
+    <div id="prices-container">
+        <h1>Historical Prices Data</h1>
+        {% for date, prices in grouped_data.items() %}
+        <caption>{{ date }}</caption>
+            <table class="table table-hover table-sm">
+                <thead>
+                    <tr>
+                        <th>Region</th>
+                        <th>Hour</th>
+                        <th>Price</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    {% for price in prices %}
+                        <tr>
+                            <td>{{ price.region }}</td>
+                            <td>{{ price.hour }}</td>
+                            <td>{{ price.price }}</td>
+                        </tr>
+                    {% endfor %}
+                </tbody>
+            </table>
+        {% endfor %}
+    </div>
 </div>
-    {% endblock %}
-
+{% endblock %}
