--- a/templates/base.html
+++ b/templates/base.html
@@ -32,7 +32,7 @@
             <div class="bottom-items">
             <ul>
                 <li><i class="material-icons">logout</i><span>Log out</span></li>
-                <li><a href="/settings"><i class="material-icons">settings</i><span>Settings</span></a></li>
+                <li><a id="settingsBtn"><i class="material-icons">settings</i><span>Settings</span></a></li>
             </ul>
             </div>
         </div>
@@ -60,7 +60,7 @@
                     <i class="material-icons">logout</i>
                     <span>Log out</span>
                 </a>
-                <a href="/settings">
+                <a id="settingsBtnMobile">
                     <i class="material-icons">settings</i>
                     <span>Settings</span>
                 </a>
@@ -70,19 +70,63 @@
 
         {% block content %}{% endblock %}
 
-        <!-- Settings Overlay 
+        <!-- Settings Overlay -->
 
-        <div id="settings-overlay" class="overlay-container" style="display:none;">
-          <div class="overlay-content">
-            Junk in here
-          </div>
-          <div class="overlay-close">
-            <i class="material-icons">close</i>
-          </div>
-        </div> -->
+<div id="settingsModal" class="modal">
+    <div class="modal-content">
+        <span class="close">&times;</span>
 
+        <h1>Settings</h1>
+            <form id="settingsForm">
+                <h5 class="card-title">Select Region</h5>
+                <p class="card-text">
+                    <select id="regionSelect" name="region">
+                        <option value="SE1">SE1</option>
+                        <option value="SE2">SE2</option>
+                        <option value="SE3">SE3</option>
+                        <option value="SE4">SE4</option>
+                        <option value="FI">FI</option>
+                        <option value="DK1">DK1</option>
+                        <option value="DK2">DK2</option>
+                        <option value="Oslo">Oslo</option>
+                        <option value="Kr.sand">Kr.sand</option>
+                        <option value="Bergen">Bergen</option>
+                        <option value="Molde">Molde</option>
+                        <option value="Tr.heim">Tr.heim</option>
+                        <option value="Tromsø">Tromsø</option>
+                        <option value="EE">EE</option>
+                        <option value="LV">LV</option>
+                        <option value="LT">LT</option>
+                        <option value="AT">AT</option>
+                        <option value="BE">BE</option>
+                        <option value="DE-LU">DE-LU</option>
+                        <option value="FR">FR</option>
+                        <option value="NL">NL</option>
+                        <option value="SYS">SYS</option>
+                    </select>
+                        <!-- Add other options for regions -->
+                </p>
+
+                <h5 class="card-title">Select Currency</h5>
+                <p class="card-text">
+                        <select id="currencySelect" name="currency">
+                            <option value="EUR">EUR</option>
+                            <option value="DKK">DKK</option>
+                            <option value="NOK">NOK</option>
+                            <option value="SEK">SEK</option>
+                        </select>
+                </p>
+                <button class="button" id="updateButton" type="submit">Update & Close</button>
+                <button class="secondButton" id="close" type="button">Cancel</button>
+
+            </form>
+
+    </div>
+        <script src="static/javascript/settings.js" type="module"></script>
+    </div>
         <!-- JavaScript -->
         <script src="/static/javascript/main_menu.js"></script>
+        <script src="/static/javascript/settings_model.js"></script>
     </body>
 </html>
 
