--- a/templates/main_page.html
+++ b/templates/main_page.html
@@ -52,6 +52,5 @@
         </div>
     </div>
     <script src="https://d3js.org/d3.v7.min.js"></script>
-    <script src="static/javascript/price_chart.js"></script>
-
+    <script src="static/javascript/price_chart.js" type="module"></script>
     {% endblock %}
