--- a/static/style.css
+++ b/static/style.css
@@ -7,7 +7,7 @@
     --primary: #FF9E75;
     --secondary: #E5EDEE;
     --pale-cyan: #75D6FF;
-    --robin-egg-blue: #12C9CC;
+    --robin-egg-blue: #98D5FE;
     --shandy: #75D6FF;
     --venetian-red: #CC1512;
 
@@ -357,6 +357,47 @@ p {
   .hidden {
     display: none;
   }
+
+
+
+/* Modal */
+
+.modal {
+    display: none; /* Hidden by default */
+    position: fixed; /* Stay in place */
+    z-index: 1; /* Sit on top */
+    left: 0;
+    top: 0;
+    width: 100%; /* Full width */
+    height: 100%; /* Full height */
+    overflow: auto; /* Enable scroll if needed */
+    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+}
+
+/* Modal Content */
+.modal-content {
+    background-color: #fefefe;
+    margin: 15% auto; /* 15% from the top and centered */
+    padding: 20px;
+    border: 1px solid #888;
+    width: 80%; /* Could be more or less, depending on screen size */
+}
+
+/* The Close Button */
+.close {
+    color: #aaa;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+    color: black;
+    text-decoration: none;
+    cursor: pointer;
+}
+
 
 /* Hamburger Menu */
 
