--- a/templates/settings-page.html
+++ b/templates/settings-page.html
@@ -51,7 +51,5 @@
             </div>
         </div>
     </div>
-
-    <script src="/static/javascript/settings.js"></script>
-
+    <script src="static/javascript/settings.js" type="module"></script>
 {% endblock %}
